--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,6 +18,15 @@
         Twitter / X
       </a>
     </div>
-
+    
+    <!-- ✅ Google scholar 버튼 -->
+    <div style="background-color: rgba(141, 193, 255, 0.3); border-radius: 10px; padding: 10px 16px; display: flex; align-items: center;">
+      <img src="/assets/images/google_scholar_icon.png" alt="Google scholar Icon" width="24px" style="margin-right: 10px;" />
+      <a href="https://scholar.google.com/citations?user=WuHVnzsAAAAJ&hl" target="_blank"
+         style="color: white; font-weight: bold; text-decoration: none;">
+        Google Scholar
+      </a>
+    </div>
+    
   </div>
 </div>
